# CTC

./: AUTHORS.md  README.md  YAML.yaml  dune-project  main
_build/: .db  .digest-db  log
_build/default/: final_project.dune-package  final_project.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: card.ml  character.ml  deck.ml  deck.mli  enemy.ml  final_project.cma  final_project.cmxa  final_project.cmxs  final_project.ml-gen
_build/default/lib/.final_project.objs/: final_project__Card.impl.d  final_project__Card.intf.d  final_project__Character.impl.d  final_project__Character.intf.d  final_project__Deck.impl.d  final_project__Enemy.impl.d  final_project__Enemy.intf.d
_build/default/lib/.final_project.objs/byte/: final_project.cmi  final_project.cmo  final_project.cmt  final_project__Card.cmi  final_project__Card.cmo  final_project__Card.cmt  final_project__Card.cmti  final_project__Character.cmi  final_project__Character.cmo  final_project__Character.cmt  final_project__Character.cmti  final_project__Deck.cmi  final_project__Deck.cmo  final_project__Deck.cmt  (+5 more)
_build/default/lib/.merlin-conf/: lib-final_project
_build/default/test/.merlin-conf/: exe-test_final_project
assets/: Sand-dunes-Sahara-Morocco-Merzouga.png:Zone.Identifier  desert.png:Zone.Identifier
game/: const.ml  dune  game.ml  level.ml
lib/: animations.ml  animations.mli  camel.ml  camel.mli  card.ml  card.mli  character.ml  character.mli  const.ml  const.mli  deck.ml  deck.mli  dune  enemy.ml  enemy.mli  level.ml  level.mli
test/: dune  test_game.ml
(+8 files in other folders)
